# sesac_2wprogject_crawler

./: .gitignore  README.md  app.py  backup.py  clock.py  krx.json  main.py  pyproject.toml
